--- a/package.json
+++ b/package.json
@@ -14,20 +14,23 @@
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.10.5",
+    "libphonenumber-js": "^1.12.8",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
     "next-seo": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-otp-input": "^3.1.1",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
